fixed intro A3C.ipynb and folder names

--- a/A3C.ipynb
+++ b/A3C.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Reinforcement Learning with Tensorflow Part 8: Asynchronus Advantage Actor-Critic (A3C)\n",
+    "# Asynchronus Advantage Actor-Critic (A3C) on a Snake Robot\n",
     "\n",
     "This iPython notebook includes an implementation of the [A3C algorithm](https://arxiv.org/pdf/1602.01783.pdf), based on Arthur Juliani's A3C code. For more information on A3C, see the accompanying [Medium post](https://medium.com/p/c88f72a5e9f2/edit).\n",
     "\n",
@@ -371,10 +371,6 @@
    "source": [
     "import pickle\n",
     "\n",
-    "load_model = True #Whether to load a saved model.\n",
-    "#model_path = \"./model_Test\" #The path to save our model to.\n",
-    "\n",
-    "#saver.save(SESS,'./model_online/model-'+str(GLOBAL_EP)+'.cptk')\\\n",
     "with open('runData.snake', 'wb') as file:\n",
     "    data = {}\n",
     "    data['amps'] = []\n",
