--- a/A3C.ipynb
+++ b/A3C.ipynb
@@ -32,7 +32,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -148,9 +147,9 @@
     "                    #use clip to avoid log(0): tf.clip_by_value(self.policy, 1e-20, 1.0)\n",
     "                    log_prob = tf.reduce_sum(tf.log(tf.clip_by_value(self.a_prob, 1e-20, 1.0)) * tf.one_hot(self.a_his, a_size, dtype=tf.float32), axis=1, keep_dims=True)\n",
     "                    exp_v = log_prob * td\n",
-    "                    #Found someone use entropy to encourage exploration\n",
+    "                    #Found someone using entropy to encourage exploration\n",
     "                    #larger entropy means more stochastic actions\n",
-    "                    entropy = -tf.reduce_sum(self.a_prob * tf.log(tf.clip_by_value(self.a_prob, 1e-20, 1.0)), axis=1, keep_dims=True)  # encourage exploration\n",
+    "                    entropy = -tf.reduce_sum(self.a_prob * tf.log(tf.clip_by_value(self.a_prob, 1e-20, 1.0)), axis=1, keep_dims=True)\n",
     "                    self.exp_v = ENTROPY_BETA * entropy + exp_v\n",
     "                    self.a_loss = tf.reduce_mean(-self.exp_v)\n",
     "\n",
@@ -174,16 +173,15 @@
     "    def _build_net(self):\n",
     "        w_init = tf.random_normal_initializer(0., .1)\n",
     "        with tf.variable_scope('actor'):\n",
-    "            #dense layer is normal NN,see: https://www.tensorflow.org/api_docs/python/tf/layers/dense\n",
     "            layer4 = tf.layers.dense(self.s, a_size, tf.nn.relu6, kernel_initializer=w_init, name='layer4')\n",
     "            layer3 = tf.layers.dense(layer4, a_size, tf.nn.relu6, kernel_initializer=w_init, name='layer3')\n",
     "            layer2 = tf.layers.dense(layer3, a_size, tf.nn.relu6, kernel_initializer=w_init, name='layer2')\n",
     "            a_prob = tf.layers.dense(layer2, a_size, tf.nn.softmax, kernel_initializer=w_init, name='ap')\n",
     "        with tf.variable_scope('critic'):\n",
-    "            v4 = tf.layers.dense(self.s, 1, tf.nn.relu6, kernel_initializer=w_init, name='v4')#relu6 is better than relu\n",
-    "            v3 = tf.layers.dense(v4, 1, tf.nn.relu6, kernel_initializer=w_init, name='v3')#relu6 is better than relu\n",
-    "            v2 = tf.layers.dense(v3, 1, tf.nn.relu6, kernel_initializer=w_init, name='v2')#relu6 is better than relu\n",
-    "            v = tf.layers.dense(v2, 1, tf.nn.relu6, kernel_initializer=w_init, name='v')#relu6 is better than relu\n",
+    "            v4 = tf.layers.dense(self.s, 1, tf.nn.relu6, kernel_initializer=w_init, name='v4')\n",
+    "            v3 = tf.layers.dense(v4, 1, tf.nn.relu6, kernel_initializer=w_init, name='v3')\n",
+    "            v2 = tf.layers.dense(v3, 1, tf.nn.relu6, kernel_initializer=w_init, name='v2')\n",
+    "            v = tf.layers.dense(v2, 1, tf.nn.relu6, kernel_initializer=w_init, name='v')\n",
     "        return a_prob, v\n",
     "\n",
     "    def update_global(self, feed_dict):  # run by a local\n",
@@ -285,16 +283,10 @@
     "                        mean_reward = np.mean(GLOBAL_REWARD[-5:])\n",
     "                        mean_c_loss = np.max(np.mean(c_loss[-5:]))\n",
     "                        mean_a_loss = np.max(np.mean(a_loss[-5:]))\n",
-    "                        #mean_a_grads = np.mean(a_grads[-5:])\n",
-    "                        #mean_value = np.mean(self.episode_mean_values[-5:])\n",
     "                        summary=tf.Summary()\n",
     "                        summary.value.add(tag='Perf/Reward', simple_value=float(mean_reward))\n",
-    "                        #summary.value.add(tag='Perf/Value', simple_value=float(mean_value))\n",
     "                        summary.value.add(tag='Losses/Value Loss', simple_value=float(mean_c_loss))\n",
     "                        summary.value.add(tag='Losses/Policy Loss', simple_value=float(mean_a_loss))\n",
-    "                        #summary.value.add(tag='Losses/Entropy', simple_value=float(e_l))\n",
-    "                        #summary.value.add(tag='Losses/Grad Norm', simple_value=float(mean_a_grads))\n",
-    "                        #summary.value.add(tag='Losses/Var Norm', simple_value=float(c_grads))\n",
     "                        self.summary_writer.add_summary(summary, GLOBAL_EP)\n",
     "\n",
     "                        self.summary_writer.flush()\n",
@@ -314,7 +306,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -368,31 +359,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "with open('runData.snake', 'wb') as file:\n",
-    "    data = {}\n",
-    "    data['amps'] = []\n",
-    "    data['spFreqs'] = []\n",
-    "    data['GLOBAL_EP'] = MAX_GLOBAL_EP\n",
-    "    pickle.dump(data, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -406,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
